k8s/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  namespace: eventora
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      serviceAccountName: mongo-sa
      securityContext:
        seccompProfile:
          type: RuntimeDefault
        fsGroup: 999
        runAsUser: 999
        runAsNonRoot: true
      containers:
        - name: mongo
          image: mongo:7.0
          ports:
            - containerPort: 27017
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          livenessProbe:
            exec:
              command:
                - mongosh
                - --quiet
                - --eval
                - "db.adminCommand('ping')"
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            exec:
              command:
                - mongosh
                - --quiet
                - --eval
                - "db.adminCommand('ping')"
            initialDelaySeconds: 15
            periodSeconds: 10
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
            - name: tmp-volume
              mountPath: /tmp
            - name: mongo-configdb
              mountPath: /data/configdb
      volumes:
        - name: mongo-data
          emptyDir: {}
        - name: tmp-volume
          emptyDir: {}
        - name: mongo-configdb
          emptyDir: {}
