k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: eventora
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
