k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: eventora
spec:
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
